WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212759
Text manipulation: first and last unit in a paragraph should not contain only excluded tokens
https://bugs.webkit.org/show_bug.cgi?id=212759
Summary
Text manipulation: first and last unit in a paragraph should not contain only...
Sihui Liu
Reported
2020-06-04 10:35:01 PDT
...
Attachments
Patch
(25.10 KB, patch)
2020-06-04 11:00 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(24.91 KB, patch)
2020-06-04 22:45 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-06-04 11:00:01 PDT
Created
attachment 401047
[details]
Patch
Wenson Hsieh
Comment 2
2020-06-04 16:11:04 PDT
Comment on
attachment 401047
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401047&action=review
> Source/WebCore/ChangeLog:10 > + tokens in a ManipulationUnit are excluded, it means the ManipulationUnit is exluced and should not be
Nit - “exluced”
> Source/WebCore/editing/TextManipulationController.cpp:417 > + Vector<ManipulationToken> tokens; > + tokens.append(ManipulationToken { m_tokenIdentifier.generate(), "[]", tokenInfo(content.node.get()), true }); > + unitsInCurrentParagraph.append(ManipulationUnit { WTFMove(tokens), *contentNode });
Nit - you probably don’t need a local variable for `tokens`. But if you want to keep the local variable, you should use an initializer list when initializing `tokens`.
Sihui Liu
Comment 3
2020-06-04 22:45:44 PDT
Created
attachment 401120
[details]
Patch for landing
EWS
Comment 4
2020-06-04 23:13:35 PDT
Committed
r262601
: <
https://trac.webkit.org/changeset/262601
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401120
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-06-05 09:58:10 PDT
<
rdar://problem/64033285
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug