Text manipulation: first and last unit in a paragraph should not contain only excluded tokens https://bugs.webkit.org/show_bug.cgi?id=212759

Reviewed by Wenson Hsieh.

Source/WebCore:

In r262398, we literally made text of one Node as the minimum unit for text manipulation. This patches introduce
a struct ManipulationUnit for that. Now a paragraph can be represented as multiple ManipulationUnits. When all
tokens in a ManipulationUnit are excluded, it means the ManipulationUnit is excluded and should not be
manipulated. To record ManipulationUnits in a paragraph based on our current implementation, we need to keep the
excluded ManipulationUnits surrounded by non-excluded ManipulationUnits, but we can safely remove the leading
and trailing excluded ManipulationUnits. In this case, we can limit the range of paragraph further and thus less
text replacement work.

Covered by existing test.

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::parse):
(WebCore::TextManipulationController::addItemIfPossible):
(WebCore::TextManipulationController::observeParagraphs):
* editing/TextManipulationController.h:

Tools:

Modify existing test for changed behavior that leading and trailing excluded units are not included in paragraph
now.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/225607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262601 268f45cc-cd09-0410-ab3c-d52691b4dbfc